--- a/templates/interface/css/light.style.css
+++ b/templates/interface/css/light.style.css
@@ -9,8 +9,8 @@ ELEMENTS
 
 
 body, table, .long_list_even, div.tabdiv {
-background-color: #f7f7f7;
-color: #000;
+background-color: #f7f7f7 !important;
+color: #000 !important;
 }
 
 
@@ -18,6 +18,25 @@ input:not(.range-field), textarea {
 background-color: white;
 }
 
+
+.tablesorter-filter-row td {
+background-color: white !important;
+color: black !important;
+}
+
+
+.tablesorter-light .tablesorter-filter {
+color: black !important;
+}
+
+
+.tablesorter-light tbody > tr.odd:hover > td, .tablesorter-light tr.odd td.primary, .tablesorter-light tr.odd td.secondary {
+background-color: #d6d4d4 !important;
+}
+
+.tablesorter-light tbody > tr.even:hover > td, .tablesorter-light tr.even td.primary, .tablesorter-light tr.even td.secondary {
+background-color: white !important;
+}
 
 select {
 background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3e%3cpath fill='black' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right .5rem center/8px 10px !important;
