final polish on 'add market' backend logic
final polish on 'add market' backend logic

--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -197,6 +197,11 @@ CLASSES
 ////////////////////////////// */
 
 
+.input_margins {
+margin: 0.5em !important;
+}
+
+
 table.data_table:not(#coins_table) {
     border-radius: 0.5em;
 }
