--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -197,6 +197,16 @@ CLASSES
 ////////////////////////////// */
 
 
+.ct_jstree {
+     display: none;
+    background-color: white !important;
+    color: black !important;
+    padding: 1em !important;
+    border-radius: 0.5em !important;
+    border: 0.15em solid #808080;
+}
+
+
 .input_margins {
 margin: 0.5em !important;
 }
@@ -1584,7 +1594,7 @@ border-radius: 0px !important;
 }
 
 
-#alert_source, #percent_change_amnt, #percent_change_filter, #percent_change_time, #percent_change_alert_type, #show_chart_settings, #show_feed_settings, #show_portfolio_stats, #show_help_faq, #show_system_stats, #show_access_stats, #show_logs, #coins_table, #sys_stats_quick_link_info, .sys_stats_admin_link_info, #header_size_warning, #access_stats_data, .show_2fa_verification, .hidden {
+#alert_source, #percent_change_amnt, #percent_change_filter, #percent_change_time, #percent_change_alert_type, #show_chart_settings, #show_feed_settings, #show_portfolio_stats, #show_help_faq, #show_system_stats, #show_access_stats, #show_logs, #coins_table, #sys_stats_quick_link_info, .sys_stats_admin_link_info, #header_size_warning, #access_stats_data, #markets_delete_selected, .show_2fa_verification, .hidden {
 display: none;
 }
 
