--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -1603,7 +1603,7 @@ border-radius: 0px !important;
 }
 
 
-#alert_source, #percent_change_amnt, #percent_change_filter, #percent_change_time, #percent_change_alert_type, #show_chart_settings, #show_feed_settings, #show_portfolio_stats, #show_help_faq, #show_system_stats, #show_access_stats, #show_logs, #coins_table, #sys_stats_quick_link_info, .sys_stats_admin_link_info, #header_size_warning, #access_stats_data, #asset_markets_delete_selected, #assets_delete_selected, .show_2fa_verification, .hidden, .save_notice {
+#alert_source, #percent_change_amnt, #percent_change_filter, #percent_change_time, #percent_change_alert_type, #show_chart_settings, #show_feed_settings, #show_portfolio_stats, #show_help_faq, #show_system_stats, #show_access_stats, #show_logs, #coins_table, #sys_stats_quick_link_info, .sys_stats_admin_link_info, #header_size_warning, #access_stats_data, .jstree_delete_selected, .show_2fa_verification, .hidden, .save_notice {
 display: none;
 }
 
