UX, fixes, tweaks, docs
UX, fixes, tweaks, docs

--- a/templates/interface/css/dark.style.css
+++ b/templates/interface/css/dark.style.css
@@ -306,6 +306,11 @@ color: #ff4747 !important;
 }
 
 
+#sidebar ul.list-unstyled li a.red:link {
+color: #ff4747 !important;
+}
+
+
 .sidebar_secondary_link {
     color: white !important;
 }
@@ -364,8 +369,8 @@ border-left: 0px solid #686767 !important;
 }
 
 
-#sidebar ul.list-unstyled li a:link,
-#sidebar ul.list-unstyled li a:visited,
+#sidebar ul.list-unstyled li a:link:not(.red):not(.red_bright):not(.blue):not(.green):not(.green_bright):not(.bitcoin),
+#sidebar ul.list-unstyled li a:visited:not(.red):not(.red_bright):not(.blue):not(.green):not(.green_bright):not(.bitcoin),
 #sidebar h3, 
 #sidebar ul.list-unstyled p,
 #sidebar ul p,
