--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -443,6 +443,7 @@ border: 0.2em solid #808080 !important;
 .chart_wrapper {
 position: relative;
 border-radius: 0.9em;
+min-width: 100% !important;
 }
 
 
