--- a/templates/interface/css/tablesorter/theme.dark.css
+++ b/templates/interface/css/tablesorter/theme.dark.css
@@ -33,13 +33,13 @@ Default Theme
 .tablesorter-dark thead .tablesorter-headerSortUp,
 .tablesorter-dark thead .tablesorter-headerAsc {
 	background-image: url(data:image/gif;base64,R0lGODlhFQAEAIAAAP///////yH5BAEAAAEALAAAAAAVAAQAAAINjI8Bya2wnINUMopZAQA7);
-	border-bottom: #888 1px solid;
+	border-bottom: #fff 2px solid;
 }
 .tablesorter-dark thead .headerSortDown,
 .tablesorter-dark thead .tablesorter-headerSortDown,
 .tablesorter-dark thead .tablesorter-headerDesc {
 	background-image: url(data:image/gif;base64,R0lGODlhFQAEAIAAAP///////yH5BAEAAAEALAAAAAAVAAQAAAINjB+gC+jP2ptn0WskLQA7);
-	border-bottom: #888 1px solid;
+	border-bottom: #fff 2px solid;
 }
 .tablesorter-dark thead .sorter-false {
 	background-image: none;
