--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -190,6 +190,22 @@ CLASSES
 ////////////////////////////// */
 
 
+/* https://talk.tiddlywiki.org/t/how-to-limit-the-width-of-select-widget-if-the-text-in-the-dropdown-in-lengthy/10406 */
+.narrow_dropdown {
+max-width:13em !important;
+overflow:hidden !important;
+text-overflow:ellipsis !important;
+}
+
+
+.num_conv:not(input) {
+all: inherit !important;
+display: inline-block !important;
+margin: 0px !important;
+padding: 0px !important;
+}
+
+
 .ct_jstree {
      display: none;
     background-color: white !important;
@@ -542,7 +558,7 @@ line-height: 2.6em;
 }
 
 
-.start_page_menu_red {
+.start_page_menu_red, .start_page_menu_blue, .start_page_menu_green {
 padding: 0.4em !important;
 }
 
@@ -620,6 +636,12 @@ color: #ff4747 !important;
 
 .yellow {
 color: #ffb83f !important;
+}
+
+
+.yellow_dotted {
+padding: 10px;
+border: 0.4em dotted #ffb83f !important;
 }
 
 
@@ -808,11 +830,6 @@ min-width: 1150px !important;
     overflow: hidden !important;
     white-space: nowrap !important;
     text-overflow: ellipsis !important;
-}
-
-
-.bitcoin_dotted, .blue_dotted, .green_dotted, .red_dotted, .start_page_menu_red, #watch_only, #charts_error, #system_charts_error {
-border-radius: 0.7em !important;
 }
 
 
@@ -1565,6 +1582,13 @@ display: none;
 /* ---------------------------------------------------
     *fit-content* CAN FLIP OUT COLOR-CODING IN EDITORS
 ----------------------------------------------------- */
+
+
+.bitcoin_dotted, .blue_dotted, .green_dotted, .red_dotted, .yellow_dotted, .start_page_menu_red, .start_page_menu_blue, .start_page_menu_green, #watch_only, #charts_error, #system_charts_error {
+border-radius: 0.7em !important;
+width: fit-content !important;
+margin: 1em !important;
+}
 
 
 fieldset {
