refactoring, alphavantage stock overview support
refactoring, alphavantage stock overview support

--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -525,7 +525,7 @@ font-weight: normal;
 
 
 .coin_info {
-white-space: nowrap;
+  overflow-wrap: break-word; /* Or word-wrap: break-word; */
 }
 
 
