--- a/templates/interface/css/light.style.css
+++ b/templates/interface/css/light.style.css
@@ -19,6 +19,11 @@ background-color: white;
 }
 
 
+.local_storage_saved_notice {
+    background-color: black !important;
+}
+
+
 .tablesorter-filter-row td {
 background-color: white !important;
 color: black !important;
