--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -443,7 +443,7 @@ overflow-x: hidden !important; /* Hide horizontal scrollbar */
 }
 
 
-.random_tip a {
+.random_tip a:not(.red) {
 color: #F7931A !important;
 text-decoration-style: dotted;
 }
