--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -908,7 +908,7 @@ margin-top: 1.1em !important;
     font-size: 1.6em !important;   
     font-weight: 400 !important;
     line-height: 3.1em !important;
-    padding: 0.6em 0em !important;
+    padding: 0.6em !important;
     position: fixed;
     bottom: 0;
     left: 0;
