UX, added nav menu option for plugins
UX, added nav menu option for plugins

--- a/templates/interface/css/dark.style.css
+++ b/templates/interface/css/dark.style.css
@@ -398,6 +398,7 @@ color: white !important;
 #sidebar ul li.sidebar-item a.active,
 .user-nav a.active,
 .admin-nav a.active,
+.plugin-nav a.active,
 #sidebar ul li.active a.nav-link.active
 {
 background-color: #cecccc !important;
