compact submenu rendering fixes / UX, plugin nav menu fixes, refactoring, gen UX
compact submenu rendering fixes / UX, plugin nav menu fixes, refactoring, gen UX

--- a/plugins/on-chain-stats/plug-assets/plug-style.css
+++ b/plugins/on-chain-stats/plug-assets/plug-style.css
@@ -7,3 +7,8 @@ margin: 0.75em !important;
 .sol_epoch_data {
 padding: 1.5em !important;
 }
+
+.leaflet_zindex_fix {
+position: relative !important;
+z-index: 1 !important;
+}
